[package]
name = "mach_sys"
version = "0.1.0"
authors = ["Umang Raghuvanshi <u@umangis.me>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
build_bindings = ["bindgen"]

[build-dependencies]
bindgen = { version = "0.53.1", optional = true }
